# DMS

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.393be19  README.md  basepage.h  calibratepage.cpp  calibratepage.h  calibratepage.ui  camsetpage.cpp  camsetpage.h  camsetpage.ui  functions.cpp  functions.h  help.txt  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitorpage.cpp  monitorpage.h  monitorpage.ui  protocols.h  startpage.cpp  startpage.h  startpage.ui  utils.cpp  utils.h
camera/: camera_server
dms_client/: CMakeLists.txt  help.txt
dms_client/include/: bluetooth.h  calibratepage.h  camsetpage.h  led.h  mainwindow.h  monitorpage.h  protocols.h  speaker.h  startpage.h  utils.h
dms_client/resources/: resources.qrc
dms_client/src/: basepage.cpp  bluetooth.cpp  calibratepage.cpp  camsetpage.cpp  led.cpp  main.cpp  mainwindow.cpp  monitorpage.cpp  speaker.cpp  startpage.cpp  utils.cpp
dms_client/ui/: calibratepage.ui  mainwindow.ui  monitorpage.ui  startpage.ui
dms_server/: CMakeLists.txt  help.txt
dms_server/include/: co2.h  functions.h  global.h  gps.h  protocols.h  threads.h  utils.h
dms_server/src/: calibratepage.cpp  camsetpage.cpp  co2.cpp  gps.cpp  main.cpp  monitorpage.cpp  startpage.cpp  threads.cpp  utils.cpp
driver/bluetooth/: help.txt
driver/gps/: help.txt
driver/led/: .dms_led.o.d  Makefile  dms_dev.h  dms_led.c  dms_led.dts  dms_led.h  dms_led_test.c  help.txt
driver/speaker/: help.txt
include/: calibratepage.h  camsetpage.h  functions.h  global.h  mainwindow.h  monitorpage.h  protocols.h  threads.h  utils.h
src/: calibratepage.cpp  camsetpage.cpp  main.cpp  mainwindow.cpp  monitorpage.cpp  threads.cpp  utils.cpp
ui/: calibratepage.ui  camsetpage.ui  mainwindow.ui  monitorpage.ui  startpage.ui
